# LifeCoachAI_V2

./: .env.example  .gitignore  LifeCoachV2.command  README.md  main.py  pyproject.toml
.github/workflows/: release.yml
backend/: pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  observability.py  schemas.py
backend/app/agents/: __init__.py  doc_schemas.py  llm.py  prompts.py  prompts.yaml
backend/app/routers/: clients.py  documents.py  recording.py  sessions.py
backend/app/services/: doc_generator.py  doc_render.py  macos_audio.py  progress.py  recorder.py  transcriber.py  transcription_job.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: DocEditor.tsx  Layout.tsx  ui.tsx
frontend/src/pages/: ClientDetailPage.tsx  ClientsPage.tsx  SessionPage.tsx  SystemPage.tsx
