[project]
name = "lifecoach-backend"
version = "0.1.0"
description = "LifeCoach AI V2 — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "langfuse>=3.0",
    "sqlalchemy>=2.0",
    "deepgram-sdk>=5.3",
    "python-multipart>=0.0.12",
    "sounddevice>=0.5",
    "soundfile>=0.12",
    "numpy>=2.0",
    "langchain-openai>=0.3",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
